# FinansTakip

./: --app.py  .gitignore  .replit  CODEX_AGENT_INSTRUCTIONS.md  FINANS_TAKIP_ANALIZ_RAPORU.md  FinansTakipTest.spec  README.md  SATIS_MODULU_INSTRUCTIONS.md  STOPAJ_TOOL_INSTRUCTIONS.md  YatirimTakip.spec  app.py  app_weasyprint_versiyon copy.py  auth.py  dotenv.py  icon.ai  icon.icns  kurulum.txt  main.py  models.py  postbuild_fix.sh  pyproject.toml  replit.md  requirements.txt  test_weasy.py
!!!/: ---YatirimTakip.spec  YatirimTakip copy.spec  main_ILK_VERSION.py
!!!/ikinci_version_OLD/: auth.py
!!!/ilk_version_OLD/: pyproject.toml
!!!/instance/: finans_takip.db
KAYNAK/: gui icons.ai
attached_assets/: Pasted-def-altin-verisi-cek-altin-turu-kodu-Altinkaynak-servisine-manuel-SOAP-iste-i-g-ndererek-al-1749040325097.txt
flask_wtf/: __init__.py  csrf.py
hooks/: hook-weasyprint.py
ikinci_version_OLD/: app.py  models.py
ilk_version_OLD/: app.py  create_admin.py
instance/: finans_takip-BOŞ kopyası.db  finans_takip.db
static/css/: custom.css
tefas_fon_cekici/: TEFAS_Fon_KOD-ISIM_cek_v3.py  TEFAS_Fon_Kullanım.txt  TEFAS_belirli_fon_tipleri_cekme.py
tefas_fonlar_export/: secili_fonlar_para_piyasası_hisse_senedi_yoğun_hisse_senedi_20250613_134833.txt  secili_fonlar_para_piyasası_hisse_senedi_yoğun_hisse_senedi_20250613_134833.xlsx
templates/: base.html  index.html  login.html  pdf_processing.html  pdf_ready.html  profile.html  register.html  satislar.html  stopaj.html  stopaj_oranlari.html  yatirimlar.html
tests/: test_stopaj.py  test_stopaj_api.py
(+32 files in other folders)
