[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "werkzeug>=3.1.3",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
]
